# rs-news-clipper

./: .env.template  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: lib.rs
src/models/: mod.rs  web_article.rs
src/models/sites/: ai_db.rs  ai_it_now.rs  ai_news.rs  ai_scholar.rs  aismiley.rs  aizine.rs  ascii.rs  aws_security_blog.rs  business_insider_science.rs  business_insider_technology.rs  canon_malware_center.rs  codezine.rs  cookpad_techblog.rs  crowdstrike_blog.rs  cyberagent_techblog.rs  cybozu_blog.rs  dena_engineering_blog.rs  gigazine.rs  github_developers_blog.rs  gizmodo.rs  google_developers_blog.rs  gree_techblog.rs  gunosy_techblog.rs  ipa_security_center.rs  itmedia_at_it.rs  itmedia_enterprise.rs  itmedia_executive.rs  itmedia_general.rs  itmedia_marketing.rs  jpcert.rs  line_techblog.rs  medium.rs  mercari_engineering_blog.rs  mit_ai.rs  mit_research.rs  mod.rs  moneyforward_developers_blog.rs  motex.rs  nikkei_xtech.rs  qiita_blog.rs  (+21 more)
src/shared/: errors.rs  id.rs  logger.rs  mod.rs  webdriver.rs
