[package]
name = "news-clipper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arxiv-tools = "1.1.2"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = "0.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
const_format = { version = "0.2.35", features = ["derive"] }
derive-new = "0.7.0"
dotenvy = "0.15.7"
fast_html2md = "0.0.50"
feed-parser = "1.0.12"
fxhash = "0.2.1"
garde = { version = "0.22.1", features = ["derive", "email", "url"] }
indicatif = "0.18.3"
keyword-tools = { git = "https://github.com/akitenkrad/rs-keyword-tools", branch = "main" }
mockall = "0.14.0"
openai-tools = { git = "https://github.com/akitenkrad/rs-openai-tools", branch = "main" }
regex = "1.12.2"
request = { version = "0.12.24", features = ["cookies", "gzip", "brotli", "deflate"], package = "reqwest" }
rsrpp = "1.0.18"
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"

ss-tools = "0.2.7"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tiktoken-rs = "0.9.1"
tokio = { version = "1.48.0", default-features = false, features = [
    "time",
    "macros",
] }
tokio-test = "0.4.4"
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
redis = { version = "0.32.7", features = [
    "tokio-rustls-comp",
    "r2d2",
    "json",
    "aio",
] }
test-log = { version = "0.2.19", features = ["trace"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
