[package]
name = "news-clipper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
derive-new = "0.7.0"
dotenvy = "0.15.7"
fast_html2md = "0.0.50"
feed-parser = "1.0.12"
indicatif = "0.18.3"
openai-tools = { git = "https://github.com/akitenkrad/rs-openai-tools", branch = "main" }
regex = "1.12.2"
request = { version = "0.12.24", features = ["cookies", "gzip", "brotli", "deflate"], package = "reqwest" }
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = [
    "time",
    "macros",
] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
